--- a/test/api/CMakeLists.txt
+++ b/test/api/CMakeLists.txt
@@ -9,7 +9,7 @@ add_api_test (modmer_test.cpp)
 add_api_test (modmer_hash_test.cpp)
 add_api_test (modmer_hash_distance_test.cpp)
 
-#add_api_test (minstrobe_test.cpp)
+add_api_test (minstrobe_test.cpp)
 
 add_api_test (syncmer_test.cpp)
-add_api_test (syncmer_hash_test.cpp)
+#add_api_test (syncmer_hash_test.cpp)
